# third_game

./: .gitignore  0README.md  CMakeLists.txt
assets/: level1_data.txt  level2_data.txt
include/: stdlibs.h
profile_msvc/: Project1.iobj  Project1.ipdb  Project1.sln  Project1.vcxproj  Project1.vcxproj.FileListAbsolute.txt  Project1.vcxproj.filters
profile_msvc/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  Project1.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
profile_msvc/x64/Release/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
saved_vimrc/: vimrc
src/: .clang-format  .main1.cpp.swo  .main1.cpp.swp  AI.cpp  CMakeLists.txt  builder.cpp  builder.h  compile.vim  compile_level_editor.vim  entity.cpp  entity.h  frag_man.cpp  frag_man.h  global.cpp  global.h  leveledit.cpp  log-Mon_Jun_15_10_48_25_2020.txt  log-Mon_Jun_15_10_57_13_2020.txt  log-Mon_Jun_15_10_57_52_2020.txt  log-Mon_Jun_15_10_58_18_2020.txt  log-Mon_Jun_15_10_58_59_2020.txt  log-Mon_Jun_15_10_59_21_2020.txt  log-Mon_Jun_15_11_18_17_2020.txt  log-Mon_Jun_15_11_20_23_2020.txt  log-Mon_Jun_15_11_21_02_2020.txt  log-Mon_Jun_15_11_42_38_2020.txt  log-Mon_Jun_15_11_47_23_2020.txt  log-Mon_Jun_15_11_54_00_2020.txt  log-Mon_Jun_15_13_11_00_2020.txt  log-Mon_Jun_15_13_14_19_2020.txt  main1.cpp  saved_log.txt  stdlibs.h  tags  timing_manager.cpp  timing_manager.h
